# opspilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
.kiro/specs/ai-agent-layer/: design.md
.kiro/specs/cli-ops-agent/: .config.kiro  design.md
config/: ai.example.yaml  hosts.example.yaml
ops_agent/: __init__.py
ops_agent/ai/: __init__.py  agent.py  config.py  errors.py  models.py  setup_wizard.py  tool_registry.py  tools.py
ops_agent/ai/providers/: anthropic_provider.py  base.py  openai_compatible.py  openai_provider.py  registry.py
ops_agent/cli/: app.py  commands_ai.py  commands_logs.py  commands_ssh.py  commands_system.py
ops_agent/core/: config.py  log_analyzer.py  models.py  ssh_manager.py  system_inspector.py
ops_agent/services/: log_service.py  ssh_service.py  system_service.py
ops_agent/web/: deps.py  schemas.py  server.py
ops_agent/web/routers/: ai.py  logs.py  ssh.py  system.py
scripts/: healthcheck.py
tests/: conftest.py  fake_provider.py  test_ai_agent_loop.py  test_ai_api.py  test_ai_config.py  test_ai_providers.py  test_ai_tool_registry.py  test_api.py  test_log_analyzer.py  test_models.py  test_ssh_manager.py  test_system_inspector.py
