[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cli-ops-agent"
version = "1.0.0"
description = "CLI Ops Agent — system inspection, log analysis, and SSH batch management"
requires-python = ">=3.11"
dependencies = [
    "psutil==7.2.2",
    "paramiko==5.0.0",
    "typer==0.26.7",
    "rich==15.0.0",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "openai==2.41.1",
    "anthropic==0.109.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "hypothesis==6.155.2",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["ops_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
